--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,4 +11,7 @@
 </ion-nav-view></ion-tab>
 <ion-tab href="#/tab/account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" title="Account">
 <ion-nav-view name="tab-account">
+
+</ion-nav-view></ion-tab><ion-tab href="#/tab/test" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" title="Test">
+<ion-nav-view name="test">
 </ion-nav-view></ion-tab></ion-tabs>
