--- a/www/templates/tabs.slim
+++ b/www/templates/tabs.slim
@@ -11,3 +11,6 @@ ion-tabs[class="tabs-icon-top tabs-color-active-positive"]
   /Account Tab
   ion-tab[title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account"]
     ion-nav-view[name="tab-account"]
+    
+  ion-tab[title="Test" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/test"]
+    ion-nav-view[name="test"]
