--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -1,4 +1,6 @@
-<ion-view view-title="Dashboard">
-<ion-content class="padding">
-<h1>Test.slim</h1>
-</ion-content></ion-view>
+<ion-view view-title="Test.slim">
+<ion-content padding="">
+<h1>ok</h1>
+<button class="ion-button" on-tap="alertnum(test)">
+ボタンですよ
+</button></ion-content></ion-view>
