--- a/www/templates/test.slim
+++ b/www/templates/test.slim
@@ -1,3 +1,5 @@
-ion-view view-title="Dashboard" 
-  ion-content.padding
-    h1 Test.slim
+ion-view[view-title="Test.slim"]
+  ion-content[padding]
+    h1 ok
+    button.ion-button[on-tap="alertnum(test)"]
+      | ボタンですよ
