--- a/www/index.slim
+++ b/www/index.slim
@@ -21,6 +21,7 @@ html
     script[src="js/app.js"]
     script[src="js/controllers.js"]
     script[src="js/services.js"]
+    script[src="lib/ngCordova/dist/ng-cordova.js"]
     /script[src="js/test.js"]
   body[ng-app="starter"]
     ion-nav-bar.bar-stable
