--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -1,6 +1,15 @@
+<script type="text/javascript" charset="utf-8" src="components/loader.js"></script>
 <ion-view view-title="Test.slim">
 <ion-content padding="">
 <h1>ok</h1>
-<button class="ion-button" on-tap="alertnum(test)">
-ボタンですよ
-</button></ion-content></ion-view>
+<input id="inputdesu" />
+<button class="ion-button" on-tap="save()">
+save
+</button><button class="ion-button" on-tap="read()">
+read
+</button><div id="str">
+
+</div><div class="list">
+<label class="item item-input">
+<input placeholder="first name" type="text" />
+</label></div></ion-content></ion-view>
