--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -1,6 +1,4 @@
 <ion-view view-title="{{chat.name}}">
 <ion-content class="padding">
-<img ng-src="{{chat.face}}" style="width: 64px; height: 64px" />
-<p>
-{{chat.lastText}}
-</p></ion-content></ion-view>
+<h2>選んだメモが表示されます！！</h2>
+</ion-content></ion-view>
