--- a/www/templates/chat-detail.slim
+++ b/www/templates/chat-detail.slim
@@ -1,5 +1,3 @@
 ion-view[view-title="{{chat.name}}"]
   ion-content.padding
-    img[ng-src="{{chat.face}}" style="width: 64px; height: 64px"]
-    p
-      | {{chat.lastText}}
+    h2 選んだメモが表示されます！！
