--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,6 +1,10 @@
 <ion-view view-title="Account">
 <ion-content>
-<ion-list>
-</ion-list><ion-toggle ng-model="settings.enableFriends">
-Enable Friends
-</ion-toggle></ion-content></ion-view>
+<h2>select your memo</h2>
+<div class="list">
+</div><div class="item item-input-inset">
+<label class="item-input-wrapper">
+<input placeholder="input memo title" type="text" />
+</label><button class="button button-small">add</button>
+</div><div id="accountdisp">
+</div></ion-content></ion-view>
