--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,13 +1,6 @@
 <ion-view view-title="Chats">
 <ion-content>
-<ion-list>
-<ion-item class="item-remove-animate item-avatar item-icon-right" href="#/tab/chats/{{chat.id}}" ng-repeat="chat in chats" type="item-text-wrap">
-<img ng-src="{{chat.face}}" />
-<h2>
-{{chat.name}}
-</h2><p>
-{{chat.lastText}}
-</p><i class="icon ion-chevron-right icon-accessory">
-</i><ion-option-button class="button-assertive" ng-click="remove(chat)">
-Delete
-</ion-option-button></ion-item></ion-list></ion-content></ion-view>
+<h2>選んだメモが表示されます！！</h2>
+<fieldset>
+<div id="str33">
+</div></fieldset></ion-content></ion-view>
