--- a/www/templates/tab-chats.slim
+++ b/www/templates/tab-chats.slim
@@ -1,12 +1,5 @@
 ion-view[view-title="Chats"]
   ion-content
-    ion-list
-      ion-item[class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}"]
-        img[ng-src="{{chat.face}}"]
-        h2 
-          | {{chat.name}}
-        p 
-          | {{chat.lastText}}
-        i[class="icon ion-chevron-right icon-accessory"]
-        ion-option-button.button-assertive[ng-click="remove(chat)"]
-          | Delete
+    h2 選んだメモが表示されます！！
+    fieldset
+     #str33
