--- a/www/index.slim
+++ b/www/index.slim
@@ -22,7 +22,8 @@ html
     script[src="js/controllers.js"]
     script[src="js/services.js"]
     script[src="lib/ngCordova/dist/ng-cordova.js"]
-    /script[src="js/test.js"]
+    script[src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.8.5/showdown.min.js"]
+    script[src="lib/jquery-3.2.1.min.js"]
   body[ng-app="starter"]
     ion-nav-bar.bar-stable
       ion-nav-back-button
