--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,25 +1,26 @@
 <ion-view view-title="Dashboard">
 <ion-content class="padding">
-<h2>Welcome to Ionic-slim</h2>
-<p>
-This is the Ionic starter for tabs-based apps. For other starters and ready-made templates, check out the
-= succeed "." do
-<a href="http://market.ionic.io/starters" target="_blank"> Ionic Market</a>
-To edit the content of each tab, edit the corresponding template file in
-= succeed "." do
-code www/templates/
-This template is
-code www/templates/tab-dash.html
-If you need help with your app, join the Ionic Community on the
-= succeed "." do
-<a href="http://forum.ionicframework.com" target="_blank"> Ionic Forum</a>
-Make sure to
-<a href="http://twitter.com/ionicframework" target="_blank"> follow us</a>
-on Twitter to get important updates and announcements for Ionic developers.
-For help sending push notifications, join the
-<a href="https://apps.ionic.io/signup" target="_blank"> Ionic Platform</a>
-and check out
-= succeed "." do
-<a href="http://docs.ionic.io/docs/push-overview" target="_blank"> Ionic Push</a>
-We also have other services available.
-</p></ion-content></ion-view>
+<h2>select your memo</h2>
+<div id="target" on-tap="getradio()">
+<ion-list>
+<ion-radio name="hoge" ng-model="choice" ng-value="'0'">value = 0</ion-radio>
+<ion-radio name="hoge" ng-model="choice" ng-value="'1'">value = 1</ion-radio>
+<ion-radio name="hoge" ng-model="choice" ng-value="'thomson'">value = thomson</ion-radio>
+</ion-list></div><button class="button button-full button-positive" on-tap="setradio()">set a radio
+</button>
+<button class="button" on-tap="plus()">
+plus
+</button><button class="button" on-tap="minus()">
+minus
+
+</button><div class="list list-inset">
+<label class="item item-input">
+<input id="key" placeholder="key" type="text" />
+</label><label class="item item-input">
+<input id="value" placeholder="value" type="text" />
+</label><label class="item">
+<button class="button" on-tap="change()">
+change
+
+</button></label></div><button class="button" id="btn12">button12</button>
+</ion-content></ion-view>
