--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -5,9 +5,11 @@
 <h1>markdown</h1>
 <div class="list list-inset">
 <label class="item item-input">
-<textarea id="inputdesu" placeholder="input a memo">
-</textarea></label></div><button class="button" on-tap="save()">
+<input id="titled" placeholder="title" type="text" />
+</label><label class="item item-input">
+<textarea id="memosd" placeholder="input a memo">
+</textarea></label><label class="item">
+<button class="button" id="butcreate">
 save
-</button><fieldset>
-<div id="str">
-</div></fieldset></ion-content></ion-view>
+
+</button></label></div></ion-content></ion-view>
