--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -2,14 +2,11 @@
 
 <ion-view view-title="Test.slim">
 <ion-content padding="">
-<h1>markdown</h1>
 <div class="list list-inset">
 <label class="item item-input">
 <input id="titled" placeholder="title" type="text" />
 </label><label class="item item-input">
 <textarea id="memosd" placeholder="input a memo">
-</textarea></label><label class="item">
-<button class="button" id="butcreate">
-save
-
-</button></label></div></ion-content></ion-view>
+</textarea></label></div></ion-content></ion-view><ion-footer-bar align-title="left" class="bar-assertive" keyboard-attach="">
+<button class="button">h2</button>
+</ion-footer-bar>
