--- a/www/templates/test.slim
+++ b/www/templates/test.slim
@@ -2,15 +2,12 @@
 
 ion-view[view-title="Test.slim"]
   ion-content[padding]
-    h1 markdown
     div[class="list list-inset"]
       label[class="item item-input"]
         input#titled[type="text" placeholder="title"]
       label[class="item item-input"]
         textarea#memosd[placeholder="input a memo"]
-      label[class="item"]
-        button#butcreate[class="button"]
-          | save
-    
+ion-footer-bar[align-title="left" keyboard-attach class="bar-assertive"]
+  button.button h2
 
 
