--- a/www/templates/tab-chats.slim
+++ b/www/templates/tab-chats.slim
@@ -1,5 +1,9 @@
 ion-view[view-title="Chats"]
   ion-content
-    h2 選んだメモが表示されます！！
-    fieldset
-     #str33
+  
+  
+    div[class="card"]
+      div[class="item item-divider"]
+        #strtitle
+      div[class="item item-text-wrap"]
+        #str33
