--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -8,5 +8,9 @@
 </label><label class="item item-input">
 <textarea id="memosd" placeholder="input a memo">
 </textarea></label></div></ion-content></ion-view><ion-footer-bar align-title="left" class="bar-assertive" keyboard-attach="">
+<p>-</p>
 <button class="button">h2</button>
+<button class="button">---</button>
+<button class="button">list</button>
+<button class="button">hutoi</button>
 </ion-footer-bar>
