--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,18 +1,13 @@
-<ion-view view-title="Account">
+<div class="bar bar-header bar-light">
+<h1 class="title">bar-light</h1>
+<button class="button">Edit
+</button>
+</div><ion-view view-title="Account">
 <ion-content>
-<h2>select your memo</h2>
 <div class="list">
-</div><div class="item item-input-inset">
+<div class="item item-input-inset">
 <label class="item-input-wrapper">
 <input id="input_title" placeholder="input memo title" type="text" />
 </label><button class="button button-small" id="add_title">add</button>
 </div><div id="accountdisp">
-
-
-</div><ion-toggle ng-model="shouldShowDelete">
-Show Delete?
-</ion-toggle><ion-list show-delete="shouldShowDelete">
-<ion-item>
-<ion-delete-button class="ion-minus-circled" id="delete">
-</ion-delete-button>Hello, list item!
-</ion-item></ion-list></ion-content></ion-view>
+</div></div></ion-content></ion-view>
