--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,6 +1,10 @@
 <ion-view view-title="Chats">
 <ion-content>
-<h2>選んだメモが表示されます！！</h2>
-<fieldset>
+
+
+<div class="card">
+<div class="item item-divider">
+<div id="strtitle">
+</div></div><div class="item item-text-wrap">
 <div id="str33">
-</div></fieldset></ion-content></ion-view>
+</div></div></div></ion-content></ion-view>
