--- a/www/templates/test.slim
+++ b/www/templates/test.slim
@@ -8,6 +8,8 @@ ion-view[view-title="Test.slim"]
       label[class="item item-input"]
         textarea#memosd[placeholder="input a memo"]
 ion-footer-bar[align-title="left" keyboard-attach class="bar-assertive"]
+  p -
   button.button h2
-
-
+  button.button ---
+  button.button list
+  button.button hutoi
