--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -10,4 +10,6 @@
 <input id="input_title" placeholder="input memo title" type="text" />
 </label><button class="button button-small" id="add_title">add</button>
 </div><div id="accountdisp">
-</div></div></ion-content></ion-view>
+</div><label class="item">
+<button class="button" id="delete">delete</button>
+</label></div></ion-content></ion-view>
