--- a/www/templates/tab-account.slim
+++ b/www/templates/tab-account.slim
@@ -10,3 +10,5 @@ ion-view[view-title="Account"]
           input#input_title[type="text" placeholder="input memo title"]
         button#add_title[class="button button-small"] add
       #accountdisp
+      label[class="item"]
+        button#delete.button delete
