--- a/www/templates/test.html
+++ b/www/templates/test.html
@@ -9,8 +9,8 @@
 <textarea id="memosd" placeholder="input a memo">
 </textarea></label></div></ion-content></ion-view><ion-footer-bar align-title="left" class="bar-assertive" keyboard-attach="">
 <p>-</p>
-<button class="button">h2</button>
-<button class="button">---</button>
-<button class="button">list</button>
-<button class="button">hutoi</button>
+<button class="button" id="insert_h2">h2</button>
+<button class="button" id="insert_yoko">---</button>
+<button class="button" id="insert_list">list</button>
+<button class="button" id="insert_hutoi">hutoi</button>
 </ion-footer-bar>
