--- a/www/templates/test.slim
+++ b/www/templates/test.slim
@@ -9,7 +9,7 @@ ion-view[view-title="Test.slim"]
         textarea#memosd[placeholder="input a memo"]
 ion-footer-bar[align-title="left" keyboard-attach class="bar-assertive"]
   p -
-  button.button h2
-  button.button ---
-  button.button list
-  button.button hutoi
+  button#insert_h2.button h2
+  button#insert_yoko.button ---
+  button#insert_list.button list
+  button#insert_hutoi.button hutoi
